build： import iconfont

--- a/docs/01.前端/25.JavaScript文章/70.将一维数组按指定长度转为二维数组.md
+++ b/docs/01.前端/25.JavaScript文章/70.将一维数组按指定长度转为二维数组.md
@@ -1,7 +1,7 @@
 ---
 title: 将一维数组按指定长度转为二维数组
 date: 2020-02-23 13:49:31
-permalink: /pages/f1acb712033ac8da
+permalink: /read/f1acb712033ac8da
 categories: 
   - 前端
   - JavaScript文章
