--- a/docs/01.前端/25.JavaScript文章/90.JS获取和修改url参数.md
+++ b/docs/01.前端/25.JavaScript文章/90.JS获取和修改url参数.md
@@ -1,7 +1,7 @@
 ---
 title: JS获取和修改url参数
 date: 2020-03-05 12:45:37
-permalink: /pages/7a91be2d502346ce
+permalink: /read/7a91be2d502346ce
 categories: 
   - 前端
   - JavaScript文章
