--- a/docs/01.前端/25.JavaScript文章/02.new命令原理.md
+++ b/docs/01.前端/25.JavaScript文章/02.new命令原理.md
@@ -1,7 +1,7 @@
 ---
 title: new命令原理
 date: 2019-12-25 14:27:01
-permalink: /pages/8143cc480faf9a11
+permalink: /read/8143cc480faf9a11
 categories: 
   - 前端
   - JavaScript文章
