--- a/docs/01.前端/25.JavaScript文章/03.ES5面向对象.md
+++ b/docs/01.前端/25.JavaScript文章/03.ES5面向对象.md
@@ -1,7 +1,7 @@
 ---
 title: ES5面向对象
 date: 2020-02-22 10:35:43
-permalink: /pages/b1af5cb8996363c5
+permalink: /read/b1af5cb8996363c5
 categories: 
   - 前端
   - JavaScript文章
