--- a/docs/01.前端/25.JavaScript文章/04.ES6面向对象.md
+++ b/docs/01.前端/25.JavaScript文章/04.ES6面向对象.md
@@ -1,7 +1,7 @@
 ---
 title: ES6面向对象
 date: 2019-12-25 14:27:01
-permalink: /pages/1f4123be6f45abcd
+permalink: /read/1f4123be6f45abcd
 categories: 
   - 前端
   - JavaScript文章
