--- a/docs/01.前端/25.JavaScript文章/06.多种数组去重性能对比.md
+++ b/docs/01.前端/25.JavaScript文章/06.多种数组去重性能对比.md
@@ -1,7 +1,7 @@
 ---
 title: 多种数组去重性能对比
 date: 2019-12-25 14:27:01
-permalink: /pages/e808fba1fa8fbab2
+permalink: /read/e808fba1fa8fbab2
 categories: 
   - 前端
   - JavaScript文章
