--- a/docs/01.前端/25.JavaScript文章/60.判断是否为移动端浏览器.md
+++ b/docs/01.前端/25.JavaScript文章/60.判断是否为移动端浏览器.md
@@ -1,7 +1,7 @@
 ---
 title: 判断是否为移动端浏览器
 date: 2020-01-04 15:25:11
-permalink: /pages/40f623be692cf8bc
+permalink: /read/40f623be692cf8bc
 categories: 
   - 前端
   - JavaScript文章
