--- a/docs/01.前端/25.JavaScript文章/80.防抖与节流函数.md
+++ b/docs/01.前端/25.JavaScript文章/80.防抖与节流函数.md
@@ -1,7 +1,7 @@
 ---
 title: 防抖与节流函数
 date: 2020-02-29 15:07:47
-permalink: /pages/0f6a0ac99b62ede5
+permalink: /read/0f6a0ac99b62ede5
 categories: 
   - 前端
   - JavaScript文章
