--- a/docs/01.前端/30.Vue文章/20.Vue CLi3 修改webpack配置.md
+++ b/docs/01.前端/30.Vue文章/20.Vue CLi3 修改webpack配置.md
@@ -1,7 +1,7 @@
 ---
 title: Vue CLi3 修改webpack配置
 date: 2020-02-22 15:00:36
-permalink: /pages/5d463fbdb172d43b
+permalink: /read/5d463fbdb172d43b
 categories:
   - 前端
   - Vue文章
