--- a/docs/01.前端/30.Vue文章/30.Vue中的scoped和scoped穿透.md
+++ b/docs/01.前端/30.Vue文章/30.Vue中的scoped和scoped穿透.md
@@ -1,7 +1,7 @@
 ---
 title: Vue中的scoped和scoped穿透
 date: 2020-02-23 10:54:23
-permalink: /pages/c80d2751cf1f4268
+permalink: /read/c80d2751cf1f4268
 categories: 
   - 前端
   - Vue文章
