--- a/docs/01.前端/30.Vue文章/40.Vue项目使用mock数据的几种方式.md
+++ b/docs/01.前端/30.Vue文章/40.Vue项目使用mock数据的几种方式.md
@@ -1,7 +1,7 @@
 ---
 title: Vue项目使用mock数据的几种方式
 date: 2020-02-26 14:06:58
-permalink: /pages/bd1af2f75fd361fc
+permalink: /read/bd1af2f75fd361fc
 categories: 
   - 前端
   - Vue文章
