--- a/docs/javascript/原型、原型链.md
+++ b/docs/javascript/原型、原型链.md
@@ -19,7 +19,7 @@ tags:
 对象是引用数据类型，对象中的__proto__属性中实际上是保存的构造函数的prototype的指针地址。
 
 实例对象的__proto__指向构造函数的prototype，从而实现继承。
-
+<!-- more -->
 通过代码来验证：
 
 ```javascript
