--- a/docs/算法/常用数组排序.md
+++ b/docs/算法/常用数组排序.md
@@ -16,7 +16,7 @@ tags:
 步骤：
 1、两个for遍历，使用两个指针，外循环i指针，内循环j指针
 2、对比两个指针指向的元素大小，如果i>j,则进行值交换
-
+<!-- more -->
 代码如下：
 ```javascript
 let bubbleSort = function (arr) { 
