--- a/docs/javascript/原型、原型链.md
+++ b/docs/javascript/原型、原型链.md
@@ -4,9 +4,9 @@ date: 2021-01-14
 permalink: /read/2021011401
 author: RuiLin Dong
 categories:
-  - javascript
+  - JavaScript
 tags:
-  - javascript
+  - JavaScript
 ---
 # 原型、原型链
 
