修改 文章的排版

--- a/docs/guide/随笔/新的开始.md
+++ b/docs/guide/随笔/新的开始.md
@@ -21,10 +21,10 @@ tags:
 <li> 巩固前端基础，深入学习JavaScript的算法与ES规范</li>
 <li> 扩展技术视野，硬件、后端等</li>
 <li> 初入社会，多与家人联系，让他们放心</li>
-<li> 多写一些有含金量的博客，宁缺勿滥</li>
+<li> 多写一些有含金量的博客以及多记笔记</li>
 
-<br/>
+
 今年还有六个月的时间，如果能坚持以上，我觉得算是个人小目标的完成了，关于网站内容，后面会以学习笔记、解决过的细节问题记录为主，希望我能坚持下去并有所收获。
 
-<br/>
+
 -- 至此完 --
