增加  一个友情链接

--- a/docs/guide/随笔/新的开始.md
+++ b/docs/guide/随笔/新的开始.md
@@ -9,7 +9,7 @@ tags:
   - 随笔
 ---
 
-不知何时，我一直有冒过写博客的想法但却一直没有坚持，最近忙于公司业务上的需求，不断的在学习新的框架、新的知识，却一直没有总结，我是个喜欢反思的人，我意识到要赶紧行动起来，用博客来记录一些东西，并不局限于技术。这个博客网站的建立是基于vuepress的，这是一个很好的框架，我用它结合vue写了当前的这个博客主题，这是一个新的开始，这里将记录我的生活和技术上的成长。
+不知何时，我一直有冒过写博客的想法但却一直没有坚持，最近忙于公司业务上的需求，不断的在学习新的框架、新的知识，却一直没有总结，我是个喜欢反思的人，我意识到要赶紧行动起来，用博客来记录一些东西，并不局限于技术。这个博客网站的建立是基于VuePress的，这是一个很好的框架，我用它结合vue写了当前的这个博客主题，这是一个新的开始，这里将记录我的生活和技术上的成长。
 
 <!-- more -->
 
