优化 时间线方法

--- a/docs/guide/JavaScript/博客时间线的生成.md
+++ b/docs/guide/JavaScript/博客时间线的生成.md
@@ -53,38 +53,26 @@ export let testPage = [
     }
   ]
 ```
-我这里想到的解决方案是用了 Map 这个数据类型，因为它的 Key Value 以及对应的 API 可以比较方便的存储，首先遍历一次目标对象，将年份时间提取出来作为 Map 的 Key ，然后再进行一次遍历，把年份与 Key 相同的 push 到对应的 Value 数组中。
-
+我这里想到的解决方案是用了 Map 这个数据类型，因为它的 Key Value 以及对应的 API 可以比较方便的存储，思路是：遍历一次目标对象，将年份时间提取出来作为 Map 的 Key ，然后把年份与 Key 相同的 push 到对应的 Value 数组中。
 
 ```JavaScript
 /**
  * 获取时间线map
  * 
- * @param {*} pages 
+ * @param [*] pages 
  * @returns 时间线map
  */
-export const getTimeLines = (pages) => {
+export const getTimeLines = (pages:Array<any>) => {
   let resultArr = new Map()
-  let upDated = []
-  const articles = timeSort(filterConfigMd(pages))
   //获得更新过的文章，并且将文章覆盖的年份给map
-  articles.forEach(item => {
+  pages.forEach(item => {
+    let time = new Date(item.frontmatter.date)
+    let year = time.getFullYear()
     if (item.frontmatter.date) {
-      item.frontmatter.formatDate = moment(item.frontmatter.date)
-        .subtract(moment().utcOffset() / 60, "hours")
-        .format("YYYY-MM-DD")
-      upDated.push(item)
-      let time = new Date(item.frontmatter.date)
-      let year = time.getFullYear()
       if (!resultArr.has(year) && typeof year === 'number') {
         resultArr.set(year, [])
       }
     }
-  })
-  //如果key相同则push到对应的数组
-  upDated.forEach(item => {
-    let time = new Date(item.frontmatter.date)
-    let year = time.getFullYear()
     resultArr.get(year).push(item)
   })
   return resultArr
