优化 最近文章时间降序显示

--- a/docs/guide/JavaScript/博客时间线的生成.md
+++ b/docs/guide/JavaScript/博客时间线的生成.md
@@ -9,7 +9,8 @@ tags:
   - JavaScript
 ---
 
-关于博客时间线的生成，当时也是找了很多解决方法，不过没有找到比较合适的好的解决方案，以本博客(VuePress) 为例，你要处理的文章的数据格式很可能是这样的：
+关于博客时间线的生成，当时也是找了很多解决方法，不过没有找到比较合适的好的解决方案，以本博客(VuePress)为例，笔者想到的解决方案如下，如果你也是使用的 VuePress 那么你要处理的文章的数据格式很可能是这样的：
+<!-- more -->
 ```JavaScript
 export let testPage = [
     {
