--- a/docs/guide/剪贴板/代码整洁之道.md
+++ b/docs/guide/剪贴板/代码整洁之道.md
@@ -3,6 +3,10 @@ title: 代码整洁之道
 date: 2021-07-09 21:26:16
 author: RuiLin Dong
 permalink: /read/20210709092616
+categories: 
+  - 剪贴板
+tags: 
+  - 剪贴板
 ---
 > 本文摘自字节教育 [《一名合格前端工程师必备素质：代码整洁之道》](https://juejin.cn/post/6982538921586458638)
 
