--- a/docs/guide/笔记本/占位.md
+++ b/docs/guide/笔记本/占位.md
@@ -3,4 +3,9 @@ title: 占位
 date: 2021-10-24 23:32:39
 author: RuiLin Dong
 permalink: /read/20211024113239
+categories: 
+  - guide
+  - 笔记本
+tags: 
+  - 
 ---
