--- a/docs/剪贴板/代码整洁之道.md
+++ b/docs/剪贴板/代码整洁之道.md
@@ -652,9 +652,9 @@ function Component() {
         ├── Footer.test.jsx
 ```
 
-（完）
-
 参考文献：《代码整洁之道》
-[github.com/ryanmcdermo…](https://github.com/ryanmcdermott/clean-code-javascript)
-[github.com/ryanmcdermo…](https://github.com/ryanmcdermott/3rs-of-software-architecture)
-[alexkondov.com/tao-of-reac…](https://alexkondov.com/tao-of-react/)
+- [ryanmcdermott](https://github.com/ryanmcdermott/clean-code-javascript)
+- [ryanmcdermott](https://github.com/ryanmcdermott/3rs-of-software-architecture)
+- [alexkondov.com](https://alexkondov.com/tao-of-react/)
+  
+-- 至此完 --
