--- a/docs/JavaScript/原型、原型链.md
+++ b/docs/JavaScript/原型、原型链.md
@@ -11,7 +11,7 @@ tags:
 
 ## 一、原型prototype和__proto__
 
-- 每个对象都有一个__proto__属性，并且指向它的prototype原型对象。
+- 每个对象都有一个__proto__属性，并且指向它的构造函数的prototype原型对象。
 - 每个构造函数都有一个prototype原型对象
     - prototype原型对象的constructor指向构造函数本身
 
